pxc/tests/test_002_type/ifcase3.px
namespace ifcase3;
import common -;

union foo {
  int x;
  string y;
}

{
  foo v;
  v.x = 100;
  v.y = "abc";
  /* if-case */
  if (int mutable& x: v.x) { // error
    println(x);
  } else if (string y: v.y) {
    println(y);
  }
}

